--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <a href="./Ex-17dez/index.html">Água</a>
     <a href="./Ex-18jan23/iCodeThis_18_1.html">Janela da Empresa</a>
     <a href="./Ex-19jan23/index.html">Chat</a>
+    <a href="./Ex-06fev23/index.html">Chat</a>
 </body>
 </html>
